--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <article class="content-box">
             <span class="site-header">Sergio Lubezky A.</span>
             <p>
-                Mi propósito es la búsqueda constante de <a href="https://open.spotify.com/show/TU_ID_AQUI">el bien común</a>, ese estado de armonía donde el progreso de uno significa el avance de todos. 
-                Creo que esta plenitud solo es alcanzable cuando utilizamos la <a href="https://inteligencia.com">inteligencia</a> para reconocer que habitamos <a href="https://elmismobarco.com">el mismo barco</a>, integrando nuestras perspectivas para dar vida a 
+                Mi propósito es la búsqueda constante de <a href="https://creators.spotify.com/pod/show/elbiencomun">el bien común</a>, ese estado de armonía donde el progreso de uno significa el avance de todos. 
+                Creo que esta plenitud solo es alcanzable cuando utilizamos nuestra <a href="https://inteligencia.com">inteligencia</a> para reconocer que todos compartimos <a href="https://elmismobarco.com">el mismo barco</a>, y debemos integrar nuestras perspectivas para dar vida a 
                 <a href="https://unnuevopuntodevista.com">un nuevo punto de vista</a>. 
                 En mi experiencia profesional, la atención al detalle —tanto en los <a href="https://www.linkedin.com/in/sergiolubezky/" target="_blank" rel="noopener">negocios</a> como en la 
                 <a href="https://coachdefoto.com" target="_blank" rel="noopener">fotografía</a>— me permite utilizar los dones que <a href="https://dios.org">#elpatron</a> me ha dado en beneficio de la humanidad.
@@ -148,7 +148,7 @@
                 <li><a href="https://x.com/slubezky" target="_blank" rel="noopener">X</a></li>
                 <li><a href="https://www.facebook.com/sergiolubezky" target="_blank" rel="noopener">Facebook</a></li>
                 <li><a href="https://www.instagram.com/sergiolubezky/" target="_blank" rel="noopener">Instagram</a></li>
-                <li><a href="https://open.spotify.com/show/TU_ID_AQUI" target="_blank" rel="noopener">Podcast</a></li>
+                <li><a href="https://creators.spotify.com/pod/show/elbiencomun" target="_blank" rel="noopener">Podcast</a></li>
                 <li><a href="https://coachdefoto.com" target="_blank" rel="noopener">Fotografía</a></li>
             </ul>
         </nav>
