--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Sergio Lubezky A. | El Bien Común</title>
     <meta name="description" content="Espacio dedicado a la búsqueda del bien común a través de la inteligencia compartida, la fotografía y los negocios.">
     <style>
-        /* Reset básico y suavizado */
         * { box-sizing: border-box; }
         
         body { 
@@ -42,7 +41,6 @@
             font-size: 1.5rem;
         }
 
-        /* Estilo de enlaces en el texto */
         .content-box p a { 
             color: #000; 
             text-decoration: none; 
@@ -108,7 +106,6 @@
             color: #000; 
         }
 
-        /* Separador visual entre links del footer */
         .social-nav li:not(:last-child)::after { 
             content: "|"; 
             margin-left: 15px; 
@@ -124,35 +121,36 @@
 </head>
 <body>
 
-    <main>
-        <article class="content-box">
-            <span class="site-header">Sergio Lubezky A.</span>
-            <p>
-                Mi propósito es la búsqueda constante de <a href="https://creators.spotify.com/pod/show/elbiencomun">el bien común</a>, ese estado de armonía donde el progreso de uno significa el avance de todos. 
-                Creo que esta plenitud solo es alcanzable cuando utilizamos nuestra <a href="https://inteligencia.com">inteligencia</a> para reconocer que todos compartimos <a href="https://elmismobarco.com">el mismo barco</a>, y debemos integrar nuestras perspectivas para dar vida a 
-                <a href="https://unnuevopuntodevista.com">un nuevo punto de vista</a>. 
-                En mi experiencia profesional, la atención al detalle —tanto en los <a href="https://www.linkedin.com/in/sergiolubezky/" target="_blank" rel="noopener">negocios</a> como en la 
-                <a href="https://coachdefoto.com" target="_blank" rel="noopener">fotografía</a>— me permite utilizar los dones que <a href="https://dios.org">#elpatron</a> me ha dado en beneficio de la humanidad.
-            </p>
-        </article>
-    </main>
+<main>
+    <article class="content-box">
+        <span class="site-header">Sergio Lubezky A.</span>
+        <p>
+            Mi propósito es la búsqueda constante de <a href="https://creators.spotify.com/pod/show/elbiencomun">el bien común</a>, ese estado de armonía donde el progreso de uno significa el avance de todos. 
+            Creo que esta plenitud solo es alcanzable cuando utilizamos nuestra <a href="https://inteligencia.com">inteligencia</a> para reconocer que todos compartimos <a href="https://elmismobarco.com">el mismo barco</a>, y debemos integrar nuestras perspectivas para dar vida a 
+            <a href="https://unnuevopuntodevista.com">un nuevo punto de vista</a>. 
+            En mi experiencia profesional, la atención al detalle —tanto en los <a href="https://www.linkedin.com/in/sergiolubezky/" target="_blank" rel="noopener">negocios</a> como en la 
+            <a href="https://coachdefoto.com" target="_blank" rel="noopener">fotografía</a>— me permite utilizar los dones que <a href="https://dios.org">#elpatron</a> me ha dado en beneficio de la humanidad. 
+            Cuando este marco se traduce en acción, y la responsabilidad no puede esperar, ejerzo <strong><a href="https://liderazgointerino.com">liderazgo interino</a></strong> en contextos críticos.
+        </p>
+    </article>
+</main>
 
-    <footer>
-        <img src="foto-sergio.jpg" alt="Retrato de Sergio Lubezky A." class="profile-img">
-        <a href="https://lubezky.com" class="name-link">
-            <span class="name">Sergio Lubezky A.</span>
-        </a>
-        <nav>
-            <ul class="social-nav">
-                <li><a href="https://www.linkedin.com/in/sergiolubezky/" target="_blank" rel="noopener">Linkedin</a></li>
-                <li><a href="https://x.com/slubezky" target="_blank" rel="noopener">X</a></li>
-                <li><a href="https://www.facebook.com/sergiolubezky" target="_blank" rel="noopener">Facebook</a></li>
-                <li><a href="https://www.instagram.com/sergiolubezky/" target="_blank" rel="noopener">Instagram</a></li>
-                <li><a href="https://creators.spotify.com/pod/show/elbiencomun" target="_blank" rel="noopener">Podcast</a></li>
-                <li><a href="https://coachdefoto.com" target="_blank" rel="noopener">Fotografía</a></li>
-            </ul>
-        </nav>
-    </footer>
+<footer>
+    <img src="foto-sergio.jpg" alt="Retrato de Sergio Lubezky A." class="profile-img">
+    <a href="https://lubezky.com" class="name-link">
+        <span class="name">Sergio Lubezky A.</span>
+    </a>
+    <nav>
+        <ul class="social-nav">
+            <li><a href="https://www.linkedin.com/in/sergiolubezky/" target="_blank" rel="noopener">LinkedIn</a></li>
+            <li><a href="https://x.com/slubezky" target="_blank" rel="noopener">X</a></li>
+            <li><a href="https://www.facebook.com/sergiolubezky" target="_blank" rel="noopener">Facebook</a></li>
+            <li><a href="https://www.instagram.com/sergiolubezky/" target="_blank" rel="noopener">Instagram</a></li>
+            <li><a href="https://coachdefoto.com" target="_blank" rel="noopener">Fotografía</a></li>
+            <li><a href="https://www.youtube.com/playlist?list=PLOecieZCC_CbdDwQLKLKtpLoRiTw-Bv_h" target="_blank" rel="noopener">Podcast El Bien Común</a></li>
+        </ul>
+    </nav>
+</footer>
 
 </body>
 </html>
